--- a/pom.xml
+++ b/pom.xml
@@ -49,8 +49,8 @@
         <version>1.0.12</version>
     </parent>
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <!--  default URL properties -->
         <ddf.scm.connection.url />
         <snapshots.repository.url />
@@ -120,15 +120,15 @@
         <hamcrest-junit.version>2.0.0.0</hamcrest-junit.version>
         <hamcrest-optional.version>1.0</hamcrest-optional.version>
         <jsonassert.version>1.5.0</jsonassert.version>
-        <spock.version>2.0-M4-groovy-3.0</spock.version>
+        <spock.version>2.3-groovy-4.0</spock.version>
         <mockito.version>3.6.28</mockito.version>
         <pax.exam.version>4.13.5</pax.exam.version>
         <pax.logging.version>2.0.16</pax.logging.version>
         <pax.url.version>2.6.10</pax.url.version>
         <pax.web.version>7.3.25</pax.web.version>
         <restito.version>0.9.4</restito.version>
-        <restassured.version>3.3.0</restassured.version>
-        <groovy.version>3.0.7</groovy.version>
+        <restassured.version>5.5.0</restassured.version>
+        <groovy.version>4.0.23</groovy.version>
         <xmlunit.version>1.4</xmlunit.version>
         <xmlunit-matchers.version>2.8.2</xmlunit-matchers.version>
         <auth0.jwt.version>3.8.1</auth0.jwt.version>
@@ -1032,7 +1032,7 @@
             <plugin>
                 <groupId>org.codehaus.gmavenplus</groupId>
                 <artifactId>gmavenplus-plugin</artifactId>
-                <version>1.13.1</version>
+                <version>4.0.1</version>
                 <executions>
                     <execution>
                         <goals>
@@ -1394,7 +1394,7 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.codehaus.groovy</groupId>
+            <groupId>org.apache.groovy</groupId>
             <artifactId>groovy-all</artifactId>
             <version>${groovy.version}</version>
             <type>pom</type>
