--- a/pom.xml
+++ b/pom.xml
@@ -155,7 +155,7 @@
         <c3p0.version>0.9.5.5</c3p0.version>
         <cal10n.version>0.8.1</cal10n.version>
         <cal10n.thirdparty.bundle.version>${cal10n.version}_1</cal10n.thirdparty.bundle.version>
-        <camel.version>3.18.8</camel.version>
+        <camel.version>3.22.4</camel.version>
         <cesium.version>1.34</cesium.version>
         <commons-compress.version>1.23.0</commons-compress.version>
         <commons.fileupload.version>1.5</commons.fileupload.version>
@@ -180,8 +180,7 @@
         <components-font-awesome.version>4.7.0</components-font-awesome.version>
         <countryconverter.version>0.2.1</countryconverter.version>
         <cryptomator.version>1.5.2</cryptomator.version>
-        <!--TODO upgrade this to 3.5.12 to get the mina-core upgrade (https://github.com/apache/cxf/commit/f75c96a5a49f175a6618ac1ca406118bba8662b0) when available-->
-        <cxf.version>3.5.10</cxf.version>
+        <cxf.version>3.6.7</cxf.version>
         <decanter.version>2.9.0</decanter.version>
         <dropwizard.version>4.1.25</dropwizard.version>
         <equinox.version>3.17.200</equinox.version>
@@ -312,8 +311,8 @@
         <validation.version>1.1.0.Final</validation.version>
         <woodstox.core.version>6.5.1</woodstox.core.version>
         <woodstox.stax2-api.version>4.2.1</woodstox.stax2-api.version>
-        <wss4j.neethi.version>3.1.1</wss4j.neethi.version>
-        <wss4j.version>2.3.4</wss4j.version>
+        <wss4j.neethi.version>3.2.1</wss4j.neethi.version>
+        <wss4j.version>2.4.3</wss4j.version>
         <xalan.bundle.version>2.7.3_1</xalan.bundle.version>
         <xalan.version>2.7.3</xalan.version>
         <xerces.version>2.12.2</xerces.version>
@@ -531,6 +530,16 @@
                         <artifactId>apache-mime4j-dom</artifactId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.servicemix.bundles</groupId>
+                <artifactId>org.apache.servicemix.bundles.jaxb-runtime</artifactId>
+                <version>${servicemix.bundles.jaxb.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish.jaxb</groupId>
+                <artifactId>jaxb-runtime</artifactId>
+                <version>${jaxb.version}</version>
             </dependency>
 
             <!-- BEGIN: JTS dependencies -->
@@ -1516,11 +1525,6 @@
             <artifactId>failsafe-controller</artifactId>
             <version>${codice-test.version}</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.servicemix.bundles</groupId>
-            <artifactId>org.apache.servicemix.bundles.jaxb-runtime</artifactId>
-            <version>${servicemix.bundles.jaxb.version}</version>
         </dependency>
     </dependencies>
     <repositories>
