--- a/catalog/solr/catalog-solr-commands/pom.xml
+++ b/catalog/solr/catalog-solr-commands/pom.xml
@@ -164,18 +164,18 @@
         <dependency>
             <groupId>org.locationtech.jts</groupId>
             <artifactId>jts-core</artifactId>
-            <version>${jts.version}</version>
+            <version>${jts.spatial4j.version}</version>
         </dependency>
         <dependency>
             <groupId>org.locationtech.spatial4j</groupId>
             <artifactId>spatial4j</artifactId>
             <version>${spatial4j.version}</version>
         </dependency>
-      <dependency>
-        <groupId>ddf.catalog.core</groupId>
-        <artifactId>catalog-core-commands</artifactId>
-        <version>${project.version}</version>
-      </dependency>
+        <dependency>
+            <groupId>ddf.catalog.core</groupId>
+            <artifactId>catalog-core-commands</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <dependency>
             <groupId>jakarta.ws.rs</groupId>
             <artifactId>jakarta.ws.rs-api</artifactId>
@@ -203,6 +203,8 @@
                         <Karaf-Commands>org.codice.ddf.commands.solr</Karaf-Commands>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Embed-Dependency>
+                            jts-core,
+                            spatial4j,
                             catalog-core-api-impl,
                             catalog-core-commands,
                             catalog-solr-core,
@@ -246,7 +248,7 @@
                         <configuration>
                             <rules>
                                 <ArtifactSizeEnforcerRule implementation="org.codice.maven.artifactsize.ArtifactSizeEnforcerRule">
-                                    <maxArtifactSize>6.4_MB</maxArtifactSize>
+                                    <maxArtifactSize>6.3_MB</maxArtifactSize>
                                 </ArtifactSizeEnforcerRule>
                             </rules>
                         </configuration>
