--- a/catalog/solr/catalog-solr-offline-gazetteer/pom.xml
+++ b/catalog/solr/catalog-solr-offline-gazetteer/pom.xml
@@ -102,12 +102,16 @@
         <dependency>
             <groupId>org.locationtech.jts</groupId>
             <artifactId>jts-core</artifactId>
-            <version>${jts.version}</version>
+            <version>${jts.spatial4j.version}</version>
         </dependency>
         <dependency>
             <groupId>org.locationtech.spatial4j</groupId>
             <artifactId>spatial4j</artifactId>
             <version>${spatial4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-api</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.karaf.shell</groupId>
@@ -153,6 +157,8 @@
                         <Export-Package />
                         <Embed-Dependency>
                             catalog-core-api-impl,
+                            jts-core,
+                            spatial4j,
                             failsafe
                         </Embed-Dependency>
                         <Karaf-Commands>*</Karaf-Commands>
@@ -176,7 +182,7 @@
                         <configuration>
                             <rules>
                                 <ArtifactSizeEnforcerRule implementation="org.codice.maven.artifactsize.ArtifactSizeEnforcerRule">
-                                    <maxArtifactSize>3_MB</maxArtifactSize>
+                                    <maxArtifactSize>1.3_MB</maxArtifactSize>
                                 </ArtifactSizeEnforcerRule>
                             </rules>
                         </configuration>
