--- a/distribution/ddf-common/src/main/resources-filtered/etc/custom.system.properties
+++ b/distribution/ddf-common/src/main/resources-filtered/etc/custom.system.properties
@@ -149,6 +149,13 @@ https.default.protocol=TLSv1.2
 jdk.tls.client.protocols=TLSv1.2,TLSv1.3
 jdk.tls.ephemeralDHKeySize=matched
 
+# CXF 3.6 introduced a new HttpClient-based conduit. Hostname verification appears to work
+# differently with that conduit.
+# There also appears to be a bug in how the new conduit is closed that can cause it to hang
+# indefinitely.
+# Until we figure these issues out, use this property to force the older HttpURLConnection-based
+# conduit, which is what DDF has been using by default prior to the 3.6 upgrade.
+org.apache.cxf.transport.http.forceURLConnection=true
 
 #
 # File Upload Settings
