--- a/pom.xml
+++ b/pom.xml
@@ -208,7 +208,7 @@
         <jasypt.version>1.9.3</jasypt.version>
         <javax.annotation-api.version>1.3.5</javax.annotation-api.version>
         <javax.cache.version>1.1.1</javax.cache.version>
-        <javax.cache.bundle.version>1.1.0_1</javax.cache.bundle.version>
+        <javax.cache.bundle.version>1.1.1_1</javax.cache.bundle.version>
         <javax.inject.version>1</javax.inject.version>
         <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
         <jakarta.servlet-api.version>6.1.0</jakarta.servlet-api.version>
@@ -235,7 +235,7 @@
         <jsr305.bundle.version>${jsr305.version}_1</jsr305.bundle.version>
         <jsr339-api.bundle.version>2.6.0</jsr339-api.bundle.version>
         <jts.version>1.20.0</jts.version>
-        <jts.solr.version>1.17.1</jts.solr.version>
+        <jts.spatial4j.version>1.17.1</jts.spatial4j.version>
         <jvnet-ogc.version>2.6.1</jvnet-ogc.version>
         <jwnl.version>1.3.3</jwnl.version>
         <karaf.version>4.4.7</karaf.version>
