--- a/pom.xml
+++ b/pom.xml
@@ -119,9 +119,9 @@
         <spock.version>2.4-M6-groovy-4.0</spock.version>
         <mockito.version>5.17.0</mockito.version>
         <pax.exam.version>4.13.5</pax.exam.version>
-        <pax.logging.version>2.2.7</pax.logging.version>
-        <pax.url.version>2.6.14</pax.url.version>
-        <pax.web.version>8.0.27</pax.web.version>
+        <pax.logging.version>2.2.8</pax.logging.version>
+        <pax.url.version>2.6.16</pax.url.version>
+        <pax.web.version>8.0.30</pax.web.version>
         <restito.version>1.1.2</restito.version>
         <restassured.version>5.5.0</restassured.version>
         <groovy.version>4.0.23</groovy.version>
@@ -155,7 +155,7 @@
         <commons-csv.version>1.4</commons-csv.version>
         <commons-digester.version>1.8.1</commons-digester.version>
         <commons-exec.version>1.3</commons-exec.version>
-        <commons-io.version>2.15.1</commons-io.version>
+        <commons-io.version>2.18.0</commons-io.version>
         <commons-lang.version>2.6</commons-lang.version>
         <commons-lang3.version>3.14.0</commons-lang3.version>
         <commons-logging.version>1.3.1</commons-logging.version>
@@ -203,7 +203,7 @@
         <jts.geotools.version>1.19.0</jts.geotools.version>
         <jts.spatial4j.version>1.17.0</jts.spatial4j.version>
         <jwnl.version>1.3.3</jwnl.version>
-        <karaf.version>4.4.6</karaf.version>
+        <karaf.version>4.4.7</karaf.version>
         <jansi.version>2.4.1</jansi.version>
         <org.osgi.util.promise.version>1.3.0</org.osgi.util.promise.version>
         <org.osgi.util.function.version>1.2.0</org.osgi.util.function.version>
@@ -367,6 +367,11 @@
                 <groupId>commons-lang</groupId>
                 <artifactId>commons-lang</artifactId>
                 <version>${commons-lang.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-collections</groupId>
+                <artifactId>commons-collections</artifactId>
+                <version>${commons-collections.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.tika</groupId>
@@ -1379,6 +1384,11 @@
             <artifactId>failsafe-controller</artifactId>
             <version>${codice-test.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.servicemix.bundles</groupId>
+            <artifactId>org.apache.servicemix.bundles.jaxb-runtime</artifactId>
+            <version>${servicemix.bundles.jaxb.version}</version>
         </dependency>
     </dependencies>
     <repositories>
