--- a/distribution/solr-distro/pom.xml
+++ b/distribution/solr-distro/pom.xml
@@ -61,9 +61,9 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>com.googlecode.maven-download-plugin</groupId>
+                <groupId>io.github.download-maven-plugin</groupId>
                 <artifactId>download-maven-plugin</artifactId>
-                <version>1.6.6</version>
+                <version>2.0.0</version>
                 <executions>
                     <execution>
                         <phase>generate-resources</phase>
@@ -71,13 +71,11 @@
                             <goal>wget</goal>
                         </goals>
                         <configuration>
-                            <url>
-                              ${solr.download.url}/solr/solr/${solr.version}/solr-${solr.version}.tgz
-                            </url>
+                            <url>${solr.download.url}/solr/solr/${solr.version}/solr-${solr.version}.tgz</url>
                             <unpack>true</unpack>
                             <failOnError>true</failOnError>
-                            <sha512>08888ea626b9fa617438b97f9f8d552acfbd087fc9fd248e7495627716decca5e2e8d55bedf0e1f2484c838295c2abd68debb002d1ae36965eb99753320459f4</sha512>
-                            <checkSignature>true</checkSignature>
+                            <sha512>7b93dab3f0fd09c820a45574c4ef60dff0e8245b8b3a8913bc5874b6e12595ebbd3bb9c856a213ba1643673e461041e95e7e85031523dfb208686c41c366825d</sha512>
+                          <alwaysVerifyChecksum>true</alwaysVerifyChecksum>
                         </configuration>
                     </execution>
                 </executions>
